--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,8 +32,15 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <%= yield %>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span10">
+      <%= yield %>
+    </div>
+    <div class="span2">
+      ddd
+    </div>
+  </div>
 </div>
 </body>
 </html>
